--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,9 @@
  
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --danger: 0 70% 46.1%;
+    --danger-foreground: 0 100% 100%;
  
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
@@ -50,6 +53,9 @@
  
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
+
+    --danger: 0 70% 46.1%;
+    --danger-foreground: 0 100% 100%;
  
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
